<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="other">他</string>
    <string name="yes">Yes</string>
    <string name="confirm">不具合を入力してください</string>
    <string name="hello">Hello World, LFA!</string>
    <string name="app_name">&quot;誤欠品PDA&quot;</string>
<string name="OK">OK</string>
<string name="Cansel">&quot;ｷｬﾝｾﾙ&quot;</string>
<color name="WHITE">#FFFFFF</color>
<color name="back">#FFF8DC</color>
<color name="BLACK">#000000</color>
<color name="RED">#FF0000</color>
<color name="BLUE">#0000FF</color>
<color name="DARKBLUE">#000033</color>
<color name="GREEN">#00FF00</color>
<string name="syainNo">&quot;従業員ｺｰﾄﾞ入力&quot;</string>
<string name="jyuugyouinCode">&quot;従業員ｺｰﾄﾞ変更&quot;</string>
<string name="kensa">&quot;検査ｸﾞﾙｰﾌﾟ選択&quot;</string>
<string name="download">&quot;ﾀﾞｳﾝﾛｰﾄﾞ&quot;</string>
<string name="upload">&quot;ｱｯﾌﾟﾛｰﾄﾞ&quot;</string>
<string name="end">&quot;終了&quot;</string>
<string name="menyu">&quot;メニュー&quot;</string>
<string name="upload_text">&quot;ｱｯﾌﾟﾛｰﾄﾞしますよろしいですか？&quot;</string>

<string name="Mae_Button">&quot;前&quot;</string>
<string name="Tsugi_Button">&quot;次&quot;</string>
<string name="NG_Button">他</string>
<string name="sBack">戻る</string>
<string name="KouteiSelect">&quot;工程選択&quot;</string>
<string name="bodynoInput">&quot;ボデーNO直接入力&quot;</string>
<string name="kensaList">&quot;検査項目一覧&quot;</string>
<string name="kensaResume">&quot;検査中断&quot;</string>
<string name="BCNO_H0_confirm">&quot;連番確認&quot;</string>
<string name="BNO_confirm">&quot;ボデーNO確認&quot;</string>
<string name="Menu_Button">&quot;M&quot;</string>
<string name="tire">&quot;タイヤメーカー&quot;</string>
<string name="Gohin">&quot;誤品&quot;</string>
<string name="Keppin">&quot;欠品&quot;</string>
<string name="Fuyou">&quot;不要&quot;</string>
<string name="Sonota">&quot;その他&quot;</string>
<string name="kensaover">検査が終了しました</string>
<string name="sNext">次の車両へ</string>
<string name="item">項目</string>
<string name="status">状態</string>
<string name="practiceMode">訓練モード</string>
<string name="tireNG">タイヤメーカー判定結果</string>
<string name="shotimageFileDateLabel">撮影日時：</string>
<string name="vehicleNameLabel">車名：</string>
<string name="bodyNoLabel">ボデーNO：</string>
<string name="itemNameLabel"></string>
<string name="tacttimeLabel">経過時間　</string>
<string name="shotimageUnregistered">撮影画像未登録</string>
<string name="shotimageNofile">撮影画像未登録</string>
<string name="shotimageError">撮影画像ファイルの読み取りに失敗しました</string>
<string name="dialogInfoTitle">確認</string>
<string name="dialogInfoPositiveButton">Yes</string>
<string name="dialogInfoNegativeButton">No</string>
</resources>
