<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

	<TextView
	    android:id="@id/TextView02"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/kensaList"
	    android:textSize="20sp" />

<LinearLayout
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

		<TextView
		    android:id="@+id/TextView03"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:background="@color/GREEN"
		    android:text="@string/item"
		    android:textColor="@color/BLACK"
		    android:textSize="20sp" >
</TextView>

<TextView
    android:id="@+id/TextView04"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="@color/GREEN"
    android:text="@string/status"
    android:textColor="@color/BLACK"
    android:textSize="20sp" >
</TextView>
</LinearLayout>

	<LinearLayout
	    android:id="@+id/LinearLayout03"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="2"
	    android:paddingLeft="8dp" >

</LinearLayout><LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:gravity="bottom|center" >

<Button
    android:id="@+id/BL_BT_OK"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:text="@string/OK" >

</Button>

<TextView
    android:id="@+id/TextView01"
    android:layout_width="60dp"
    android:layout_height="wrap_content"
    android:visibility="invisible" >

</TextView>

<Button
    android:id="@+id/BL_BT_CANCEL"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:enabled="true"
    android:text="@string/Cansel" >
</Button>
</LinearLayout>


</LinearLayout>
