<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menyu"
            android:textSize="25sp" >
        </TextView>

        <TextView
            android:id="@+id/kensaNo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="2mm"
            android:textSize="25px" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >
        </TextView>

        

        <Button
            android:id="@+id/KouteiSelect"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/KouteiSelect"
            android:textSize="18sp" >
        </Button>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1" >
        </TextView>

        <Button
            android:id="@+id/bodynoInput"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/bodynoInput"
            android:textSize="18sp" >
        </Button>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1" >
        </TextView>
        
        <Button
            android:id="@+id/kensaList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/kensaList"
            android:textSize="18sp" >
        </Button>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1" >
        </TextView>
        
        <Button
            android:id="@+id/kensaResume"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/kensaResume"
            android:textSize="18sp" >
        </Button>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1" >
        </TextView>

        <Button
            android:id="@+id/jyuugyouinCode"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/jyuugyouinCode"
            android:textSize="18sp" >
        </Button>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1" >
        </TextView>     
        
        <Button
            android:id="@+id/Cansel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/Cansel"
            android:textSize="18sp" >
        </Button>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1" >
        </TextView>

        <Button
            android:id="@+id/end"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/end"
            android:textSize="18sp" >
        </Button>
    </LinearLayout>

</LinearLayout>