<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/KS_TV_GROUPNAME"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="1mm"
            android:text="グループ"
            android:textSize="12sp" >
        </TextView>

        <TextView
            android:id="@+id/KS_TV_KENSAJUN"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="1mm"
            android:text="No.99 "
            android:textSize="12sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/KS_TV_KENSAITEM"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="スピーカー"
            android:textSize="28sp"
            android:textStyle="bold"
            android:paddingLeft="1mm"
            android:typeface="monospace" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/KS_TV_KENSANAIYO"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="国国国国国"
            android:textColor="@color/WHITE"
            android:textSize="20sp"
            android:paddingLeft="1mm"
            android:typeface="monospace" >
        </TextView>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/FrameLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxHeight="300dp"
            android:minHeight="300dp"
            android:scaleType="fitCenter" >
        </ImageView>

        <TextView
            android:id="@+id/tvImageKensaNaiyo"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:typeface="monospace" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/LinearLayout08"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/WHITE"
            android:typeface="monospace"
            android:paddingLeft="1mm"
            android:textSize="20sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout06"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/Gohin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/Gohin" />

        <Button
            android:id="@+id/Keppin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/Keppin" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout07"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/Fuyou"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/Fuyou" />

        <Button
            android:id="@+id/Sonota"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/Sonota" />

    </LinearLayout>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:textSize="14sp" >
    </TextView>

    <LinearLayout
        android:id="@+id/LinearLayout08"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom" >

        <Button
            android:id="@+id/back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sBack"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout09"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom" >

        <TextView
            android:id="@+id/KS_TV_BODYNO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="12345"
            android:textSize="14sp" >
        </TextView>
    </LinearLayout>

</LinearLayout>