<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/kensaover"
            android:textSize="28sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/KS_TV_SYASYUNAME"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:gravity="bottom"
            android:paddingLeft="4mm"
            android:text="999W"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/KS_TV_BODYNO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:paddingLeft="4mm"
            android:text="BNO.12345"
            android:textSize="22sp"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingLeft="2mm"
        android:paddingRight="2mm" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <Button
            android:id="@+id/NEXT"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:text="@string/sNext"
            android:textSize="36sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/Cansel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sBack"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>

</LinearLayout>