<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/LinearLayout06"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="0dp" >

            <TextView
                android:id="@+id/KS_TV_GROUPNAME"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:lines="2"
                android:maxWidth="90dp"
                android:padding="0dp"
                android:text="&lt;&lt;グループ>>"
                android:textSize="12sp" />

             <TextView
                android:id="@+id/KS_TV_KENSAJUN"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                 android:layout_marginLeft="4dp"
                 android:padding="0dp"
                android:text="[999] "
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="right" >

            <Button
                android:id="@+id/btMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:soundEffectsEnabled="true"
                android:text="@string/Menu_Button"
                android:textSize="18sp"
                android:textStyle="bold"
                android:width="60sp" />

            <Button
                android:id="@+id/btMae"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="0dp"
                android:soundEffectsEnabled="true"
                android:text="@string/Mae_Button"
                android:textSize="18sp"
                android:textStyle="bold"
                android:width="60sp" />

            <Button
                android:id="@+id/btTsugi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/Tsugi_Button"
                android:textSize="18sp"
                android:textStyle="bold"
                android:width="60sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/KS_TV_KENSAITEM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tire"
            android:paddingLeft="1mm"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.5"
        android:baselineAligned="true"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <Button
            android:id="@+id/Button01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Button02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Button"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Button03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Button"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Button04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Button"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Button05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Button"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Button06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Button"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Button07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Button"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Button08"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Button"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


        <Button
            android:id="@+id/btOther"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:text="@string/other"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/KS_TV_BODYNO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"

            android:text="12345"
            android:layout_weight="1"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/KS_TV_JYUGYOIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"

            android:text="1234567"
             android:layout_weight="1"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
